fix: text align

--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -48,24 +48,34 @@
   margin-bottom: 46px;
 }
 
-.forgot-password {
-  --mb: 32px;
-  margin-bottom: var(--mb);
+.link {
+  font-size: 16px;
+}
+
+.forgot {
+  font-size: 16px;
 
   @include breakpoint(tablet) {
-    --mb: 24px;
+    padding-right: 12px;
   }
+
 }
 
 .checkboxes-groups {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   gap: 24px;
 
   @include breakpoint(tablet) {
     margin-bottom: 24px;
+
   }
 }
+
+.checkbox label {
+  font-size: 16px;
+}
+
 
 .signup-group {
   display: flex;
